# flashair-sd-file-watch

./: .gitignore  README.md  main.py  pyproject.toml
